# ORB_SLAM3_AR_Android

./: .gitignore  README.md  build.gradle  settings.gradle
OpenCVLibrary455/: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PARAconfig.yaml  config.txt
app/src/main/cpp/: Matrix.cpp  Matrix.h  Plane.cpp  Plane.h  UIUtils.cpp  UIUtils.h  native-lib.cpp
app/src/main/cpp/include/: Common.h  KeyFrame.h  LocalMapping.h  LoopClosing.h  MapDrawer.h  Settings.h  System.h  Tracking.h
app/src/main/cpp/src/: Frame.cc  KeyFrame.cc  LocalMapping.cc  LoopClosing.cc  MapDrawer.cc  Settings.cc  System.cc  Tracking.cc  Viewer.cc
app/src/main/cpp/src/a2ir/: phone_sensor.cpp  vins_type.h
app/src/main/java/com/martin/ads/rendering/gles/: GLSphere2DProgram.java  OrthoFilter.java
app/src/main/java/com/martin/ads/rendering/render/: ArObjectWrapper.java  GLES10Demo.java  ObjRendererWrapper.java  ObjectRenderer.java
app/src/main/java/com/martin/ads/slamar/: NativeHelper.java
app/src/main/java/com/martin/ads/ui/: ArCamUIActivity.java  ModelActivity.java  TestObjActivity.java
app/src/main/res/values/: strings.xml
